test/Fail/Issue1228b.err
Issue1228b.agda:40.1-45: error: [Unquote.ConInsteadOfDef]
Use con instead of def for constructor refl
